@@ -4,25 +4,28 @@ import java.util.List;
 
 import it.unical.entities.Contest;
 
-public interface ContestDAO {
+public interface ContestDAO
+{
 
 	public void create(Contest contest);
 
 	public void delete(Contest contest);
 
-	public void update(Contest contest);
-
 	public Contest get(Integer id);
 
 	public List<Contest> getAll();
 
+	public List<Contest> getContestByJury(Integer jury);
+
 	public Contest getContestByName(String name);
 
-	List<Contest> getContestBySubject(Integer subject, Integer year);
+	public List<Contest> getContestBySubject(Integer subject, Integer year);
 
-	List<Contest> getContestByJury(Integer jury);
+	public List<Contest> getContestsByProfessor(Integer id);
 
-	List<String> getContestsNamesByProfessor(Integer id);
+	public List<String> getContestsNamesByProfessor(Integer id);
 
-	Integer getIdByName(String name);
+	public Integer getIdByName(String name);
+
+	public void update(Contest contest);
 }
