@@ -8,18 +8,21 @@ import it.unical.entities.Tag;
  * @author Fabrizio
  */
 
-public interface TagDAO {
-	
+public interface TagDAO
+{
+
 	void create(Tag tag);
 
 	void delete(Tag tag);
 
-	void update(Tag tag);
-
 	List<Tag> getAllTagsByProblem(Integer problem);
-	
-	List<String> getAllTagValuesByProblem(Integer problem);
-	
+
 	List<String> getAllTagValues();
+
+	List<String> getAllTagValuesByProblem(Integer problem);
+
+	List<String> getMostPopularTags();
+
+	void update(Tag tag);
 
 }
